Change CSS and JS links to GitHub Pages
Updated stylesheet and script links to use GitHub Pages URLs.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="https://atharvathebest.github.io/pingpongp2/css.css">
     <meta charset="UTF-8">
     <title>Canvas Pong Game</title>
     </head>
@@ -22,5 +22,6 @@
             </il>
         </ul>
     </div>
-    <script src="js.js"></script>
+    <script src="https://atharvathebest.github.io/pingpongp2/js.js"></script>
+
 </html>
